🚀 Deploy: Docker + hCaptcha configurado + Sistema completo

--- a/apresentacao/index.html
+++ b/apresentacao/index.html
@@ -412,19 +412,19 @@
                             <div class="contact-text">
                                 <div class="contact-item">
                                     <i class="fab fa-linkedin"></i>
-                                    <span>{{ member.contacts.linkedin.replace('https://linkedin.com/in/', '@') }}</span>
+                                    <span>{{ member.contacts.linkedin }}</span>
                                 </div>
                                 <div class="contact-item">
                                     <i class="fab fa-github"></i>
-                                    <span>{{ member.contacts.github.replace('https://github.com/', '@') }}</span>
+                                    <span>{{ member.contacts.github }}</span>
                                 </div>
                                 <div class="contact-item">
                                     <i class="fab fa-instagram"></i>
-                                    <span>{{ member.contacts.instagram.replace('https://instagram.com/', '@') }}</span>
+                                    <span>{{ member.contacts.instagram }}</span>
                                 </div>
                                 <div class="contact-item">
                                     <i class="fab fa-whatsapp"></i>
-                                    <span>{{ member.contacts.whatsapp.replace('https://wa.me/', '+') }}</span>
+                                    <span>{{ member.contacts.whatsapp }}</span>
                                 </div>
                             </div>
                         </div>
